# collabcanvas-ai

./: .gitignore  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.base.json  vitest.config.ts
apps/web/: instrumentation.ts  package.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/(board)/board/: layout.tsx
apps/web/src/app/(board)/board/[boardId]/: page.tsx
apps/web/src/app/api/boards/[boardId]/: route.ts
apps/web/src/app/api/boards/[boardId]/nodes/: route.ts
apps/web/src/app/dev/ai-preview/: page.tsx
apps/web/src/components/board/: board-client.tsx  index.ts  metrics.ts
apps/web/src/components/home/: board-navigator.tsx
apps/web/src/lib/: ai-client.ts  otel.ts  realtime-client.ts  tracing.ts
docs/: phase-01-repo-and-mvp-skeleton.md  phase-02-board-and-persistence.md  phase-03-realtime.md  phase-04-realtime-sync.md  phase-05-ai-ghost-edits.md  phase-06-observability.md  phase-06-ux-polish.md  setup.md
observability/: otel-collector.yaml
observability/grafana/: service-health.json  trace-insights.json
prisma/: schema.prisma  seed.ts
services/ai-broker/: README.md  pyproject.toml  requests.http
services/ai-broker/app/: main.py  models.py  telemetry.py
services/realtime/: README.md  package.json  tsconfig.json
services/realtime/src/: config.ts  doc-manager.ts  index.ts  logger.ts  prisma.ts  redis.ts  server.ts  storage.ts  telemetry.ts  tracing.ts  types.ts
tests/: api-traces-route.test.ts  board-metrics.test.ts  shared-schemas.test.ts
tests/e2e/: board-flow.spec.ts
(+2 files in other folders)
